fix: fix issue with logo getting blured on mobiles

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -14,9 +14,3 @@
     margin: 4px;
     width: 25px;
 }
-
-@media (max-width: 768px) {
-    .nav__container img {
-        height: 40px;
-    }
-}
